--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markupper",
+  "name": "@medieval-rus/markupper",
   "license": "MIT",
   "dependencies": {
     "@editorjs/editorjs": "^2.22.2",
