--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@editorjs/editorjs": "^2.22.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-widgets": "^5.5.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
